@@ -281,6 +281,7 @@ class ScoreView : public QWidget {
       Element* getDragElement() const { return dragElement; }
       void changeLineSegment(bool);
       void midiNoteReceived(int pitch, bool);
+      void changeVoice(int voice);
       };
 
 extern int searchStaff(const Element* element);
